# IronGest

./: worklog.md
.github/workflows/: build.yml  test.yml
irongest/: .gitignore  App.tsx  BUILD.md  BUILD_STATUS.md  README.md  app.json  babel.config.js  eas.json  index.js  metro.config.js  package.json  react-native.config.js
irongest/.github/workflows/: build.yml
irongest/android/: build.gradle  gradle.properties  gradlew  settings.gradle  settings.gradle.kts
irongest/android/app/: build.gradle  debug.keystore  proguard-rules.pro
irongest/android/app/src/main/: AndroidManifest.xml
irongest/android/app/src/main/assets/models/: README.md
irongest/android/app/src/main/cpp/: CMakeLists.txt
irongest/android/app/src/main/cpp/gestures/: GestureClassifier.h  GestureTypes.h  KalmanFilter.h
irongest/android/app/src/main/cpp/hand_tracking/: CMakeLists.txt
irongest/android/app/src/main/java/com/irongest/: IronGestApplication.kt  IronGestPackage.kt  MainActivity.kt
irongest/android/app/src/main/java/com/irongest/accessibility/: AccessibilityControlService.kt  AppNotificationListenerService.kt  GestureAccessibilityService.kt
irongest/android/app/src/main/java/com/irongest/cursor/: CursorManager.kt  CursorModule.kt  CursorView.kt  NativeCursorModuleSpec.kt  OverlayWindowManager.kt
irongest/android/app/src/main/java/com/irongest/features/eyetracking/: EyeTrackingManager.kt
irongest/android/app/src/main/java/com/irongest/features/lockscreen/: GestureLockManager.kt
irongest/android/app/src/main/java/com/irongest/features/macros/: GestureMacroManager.kt
irongest/android/app/src/main/java/com/irongest/features/multiplayer/: MultiplayerCursorManager.kt
irongest/android/app/src/main/java/com/irongest/features/notifications/: HUDNotificationManager.kt
irongest/android/app/src/main/java/com/irongest/features/profiles/: AppProfileManager.kt
irongest/android/app/src/main/java/com/irongest/features/voice/: VoiceGestureManager.kt
irongest/android/app/src/main/java/com/irongest/features/wake/: WakeGestureManager.kt
irongest/android/app/src/main/java/com/irongest/gestures/: GestureRecognizerModule.kt  NativeGestureRecognizerSpec.kt
irongest/android/app/src/main/java/com/irongest/handtracking/: HandTrackingModule.kt  NativeHandTrackingSpec.kt
irongest/android/app/src/main/java/com/irongest/keyboard/: AirKeyboardManager.kt  FingerKeyMap.kt  FloatingKeyboardView.kt  KeyboardModule.kt  NativeKeyboardModuleSpec.kt
irongest/android/app/src/main/java/com/irongest/receivers/: BootReceiver.kt
irongest/android/app/src/main/res/anim/: slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
irongest/android/app/src/main/res/drawable/: ic_launcher_foreground.xml  splash_icon.xml
irongest/android/app/src/main/res/layout/: activity_main.xml
irongest/android/app/src/main/res/values/: strings.xml  styles.xml
irongest/android/app/src/main/res/xml/: accessibility_service_config.xml
irongest/src/cursor/: index.ts
irongest/src/features/: AdvancedFeatures.ts  index.ts
irongest/src/gestures/: index.ts  types.ts  useGestureRecognizer.ts
irongest/src/hand-tracking/: HandSkeletonOverlay.tsx  index.ts  useHandTracking.ts
irongest/src/keyboard/: KeyboardUI.tsx  TenFingerKeyboardOverlay.tsx  index.ts
irongest/src/native/: NativeCursor.ts  NativeGestureRecognizer.ts  NativeHandTracking.ts  NativeKeyboard.ts  index.ts
irongest/src/ui/: index.ts
irongest/src/ui/components/: HUDComponents.tsx
irongest/src/ui/navigation/: index.tsx
irongest/src/ui/screens/: CalibrationScreen.tsx  DashboardScreen.tsx  PermissionsScreen.tsx  SettingsScreen.tsx  SplashScreen.tsx  TutorialScreen.tsx
irongest/src/ui/theme/: index.ts
